feat: integrate follow and direct messaging
